<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginEnd="28dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:background="@color/grey">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/product_image"
                app:srcCompat="@drawable/schefflera" />

            <TextView
                android:id="@+id/productTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:text="@string/app_name" />
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/productPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
                    android:text="@string/filter" />

            </LinearLayout>
        </LinearLayout>
        
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>