<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBgColor"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="415dp"
        android:layout_height="54dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="105dp"
            android:layout_height="53dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/app_name"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="105dp"
            android:layout_height="53dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/app_name"
            android:layout_marginEnd="15dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/user" />

        <ImageButton
            android:id="@+id/addToCart1"
            android:layout_width="112dp"
            android:layout_height="50dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:onClick="openShoppingCart"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_shopping_cart"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/shopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/shop_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopName"
        app:srcCompat="@drawable/ic_filter"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/filter"
        app:layout_constraintTop_toTopOf="@+id/filter"
        tools:listitem="@layout/category_item" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryRecycler"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/product_item" />

</androidx.constraintlayout.widget.ConstraintLayout>