<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBgColor"
    tools:context=".ProductPage">

    <ImageView
        android:id="@+id/productPageImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/schefflera" />

    <TextView
        android:id="@+id/productPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Шеффлера"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:textSize="26dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productPageImage" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productPageTitle">

        <TextView
            android:id="@+id/productPagePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="7500 тг"
            android:textColor="@color/black"
            android:textSize="20dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="415dp"
        android:layout_height="54dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/addToCart"
            android:layout_width="112dp"
            android:layout_height="50dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:onClick="openShoppingCart"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_shopping_cart"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/home"
            android:layout_width="112dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/home"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/user"
            android:layout_width="112dp"
            android:layout_height="50dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.947"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/user"
            tools:ignore="MissingConstraints" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/productPageDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/product_desc"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <ImageButton
        android:id="@+id/addToCart"
        android:layout_width="76dp"
        android:layout_height="66dp"
        android:layout_marginEnd="15dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cart_add"
        android:onClick="addToCart"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/productPageImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productPageImage"
        app:srcCompat="@drawable/add" />

</androidx.constraintlayout.widget.ConstraintLayout>